# coronet-nest-module

./: README
examples/: coronet_neuron.py  iaf_4_cond_exp.py
examples/pynn/: pynn_coronet_neuron.py  pynn_iaf_4_cond_exp.py
src/: Makefile.am  coronet_neuron.cpp  coronet_neuron.h  coronetmodule.cpp  coronetmodule.h  iaf_4_cond_exp.cpp  iaf_4_cond_exp.h
src/sli/: coronetmodule.sli
test/: test_coronet_neuron.py
